[tool.poetry]
name = "poetry_openstack"
version = "0.1.0"
description = "A simple environment to run OpenStack set of CLI tools in Python Poetry"
authors = ["thomaslaurenson <thomas@thomaslaurenson.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10"
nectarallocationclient = "^2.0.0"
python-designateclient = "^6.2.0"
python-glanceclient = "^4.8.0"
python-heatclient = "^4.1.0"
python-keystoneclient = "^5.6.0"
python-neutronclient = "^11.4.0"
python-novaclient = "^18.9.0"
python-openstackclient = "^7.4.0"
varroaclient = "^1.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
