[project]
name = "uv_openstack"
version = "0.2.0"
description = "A simple environment to run OpenStack SDK and CLI tools with uv"
authors = [{name = "thomaslaurenson", email = "thomas@thomaslaurenson.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "openstacksdk>=4.0.0",
    "python-openstackclient>=8.2.0",
    "nectarallocationclient>=2.0.0",
    "varroaclient>=1.2.2",
]
